--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,13 @@
-.App {
-  padding: 1rem;
+.container {
+    display: flex;
+    .chart {
+        width: 1000px
+    }
+    .info-box {
+        margin: 30px 0px 0px 20px;
+        width: 400px;
+    }
+    .box-latest {
+        margin: 20px 0px;
+    }
 }
